Add color rule to Sass file

--- a/main.scss
+++ b/main.scss
@@ -10,5 +10,6 @@ $font-weights: (
 
 body {
     background: $primary-color;
+    color: $text-color;
     font-weight: map-get($font-weights, bold);
 }
