--- a/main.css
+++ b/main.css
@@ -1,6 +1,13 @@
 body {
   background: #272727;
   color: #fff;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
+}
+.main p {
   font-weight: 700;
 }
 /*# sourceMappingURL=main.css.map */
