--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   width: 80%;
   margin: 0 auto;
 }
-.main p {
+.main .main_paragraph {
   font-weight: 700;
 }
 /*# sourceMappingURL=main.css.map */
