--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@ body {
     width: 80%;
     margin: 0 auto;
 
-    p {
+    #{&}_paragraph {
         font-weight: map-get($font-weights, bold);
     }
 
