Add hover ruleset for main_paragraph class

--- a/main.css
+++ b/main.css
@@ -10,4 +10,7 @@ body {
 .main .main_paragraph {
   font-weight: 700;
 }
+.main .main_paragraph:hover {
+  color: pink;
+}
 /*# sourceMappingURL=main.css.map */
