Replace font-weight map-get with new weight function and pass regular as the argument

--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,9 @@
 @import './resets';
 @import './variables';
 
+@function weight($weight-name) {
+    @return map-get($font-weights, $weight-name)
+}
 
 body {
     background: $primary-color;
@@ -12,7 +15,7 @@ body {
     margin: 0 auto;
 
     #{&}_paragraph {
-        font-weight: map-get($font-weights, bold);
+        font-weight: weight(regular);
         &:hover {
             color: pink;
         }
