--- a/main.scss
+++ b/main.scss
@@ -15,7 +15,7 @@ body {
     margin: 0 auto;
 
     #{&}_paragraph {
-        font-weight: weight(regular);
+        font-weight: weight(bold);
         &:hover {
             color: pink;
         }
