Create mobile mixin in main.scss

--- a/main.scss
+++ b/main.scss
@@ -19,6 +19,12 @@
     }
 }
 
+@mixin mobile {
+    @media (max-width: $mobile) {
+        @content;
+    }
+}
+
 body {
     background: $primary-color;
     color: $text-color;
