--- a/main.css
+++ b/main.css
@@ -33,6 +33,14 @@ body {
 .main .main_paragraph:hover {
   color: pink;
 }
+@media (max-width: 800px) {
+  .main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 .light {
   background: white;
