--- a/main.css
+++ b/main.css
@@ -27,10 +27,10 @@ body {
   width: 80%;
   margin: 0 auto;
 }
-.main .main_paragraph {
+.main .main_paragraph1, .main .main_paragraph2 {
   font-weight: 700;
 }
-.main .main_paragraph:hover {
+.main .main_paragraph1:hover, .main .main_paragraph2:hover {
   color: pink;
 }
 @media (max-width: 800px) {
