--- a/main.scss
+++ b/main.scss
@@ -35,11 +35,15 @@ body {
     width: 80%;
     margin: 0 auto;
 
-    #{&}_paragraph {
+    #{&}_paragraph1 {
         font-weight: weight(bold);
         &:hover {
             color: pink;
         }
+    }
+
+    #{&}_paragraph2 {
+        @extend .main_paragraph1;
     }
 
     @include mobile{
