Add hover ruleset to paragraph2

--- a/main.css
+++ b/main.css
@@ -33,6 +33,9 @@ body {
 .main .main_paragraph1:hover, .main .main_paragraph2:hover {
   color: pink;
 }
+.main .main_paragraph2:hover {
+  color: #ff652f;
+}
 @media (max-width: 800px) {
   .main {
     -webkit-box-orient: vertical;
